--- a/index.html
+++ b/index.html
@@ -12,25 +12,33 @@
     <title>Yoga</title>
 </head>
 <body>
-    <img  id="logo" src="assets/Vector-4.png" alt="logo">
 
-    <div>
+  <header>
+    <img id="logo" src="assets/Vector-3.png" alt="logo">
+  </header>  
+
+    <main>
+      <div class="inputs">
         <input type="email" id="username" placeholder="username">
+</br>
         <input type="password" id="password" placeholder="password">
+      </div>  
 
-        <a href="#" id="new-password">forgot password?</a>
+        <a href="#" id="new-password">Forgot password?</a>
 
-        <button type="button" id="login">Login</button>
-
-        <a href="#" id="new-account">Don't have an account! Sing up now</a>
-
+        <button type="button">Login</button>
+</br>
+        <a href="#" id="new-account">Don't have an account!<span> Sing up</span> now</a>
+</br>
         <p>Or</p>
-
+    </main>    
+    
       <footer id="footer">
-        <a href="https://google.com"><img class="img" src="assets/Vector.png" alt="google"></a>
-        <a href="http://flickr.com"><img class="img" src="assets/Vector-2.png" alt="flickr"></a>
-        <a href="http://facebook.com"><img class="img" src="assets/Vector-1.png" alt="facebook"></a>
+        <nav>
+          <a href="https://google.com"><img class="img" src="assets/Vector.png" target="_blank" alt="google"></a>
+          <a href="http://flickr.com"><img class="img" src="assets/Vector-2.png" target="_blank" alt="flickr"></a>
+          <a href="http://facebook.com"><img class="img" src="assets/Vector-1.png" target="_blank" alt="facebook"></a>
+        </nav>
       </footer>
-    </div>
 </body>
 </html>
