--- a/index.html
+++ b/index.html
@@ -1,44 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <link href="style.css" type="text/css" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,900;1,400&display=swap" rel="stylesheet">
-    <title>Yoga</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link href="style.css" type="text/css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,900;1,400&display=swap"
+    rel="stylesheet">
+  <title>Yoga</title>
 </head>
+
 <body>
 
   <header>
-    <img id="logo" src="assets/Vector-3.png" alt="logo">
-  </header>  
+    <img class="logo" src="assets/Vector-3.png" alt="logo">
+  </header>
 
-    <main>
-      <div class="inputs">
-        <input type="email" id="username" placeholder="username">
-</br>
-        <input type="password" id="password" placeholder="password">
-      </div>  
+  <main>
+    <div class="inputs">
+      <input type="email" placeholder="username">
+      <input type="password" placeholder="password">
+    </div>
 
-        <a href="#" id="new-password">Forgot password?</a>
+    <div class="links">
+      <a href="#" class="new-password">Forgot password?</a>
+    </div>
 
-        <button type="button">Login</button>
-</br>
-        <a href="#" id="new-account">Don't have an account!<span> Sing up</span> now</a>
-</br>
-        <p>Or</p>
-    </main>    
-    
-      <footer id="footer">
-        <nav>
-          <a href="https://google.com"><img class="img" src="assets/Vector.png" target="_blank" alt="google"></a>
-          <a href="http://flickr.com"><img class="img" src="assets/Vector-2.png" target="_blank" alt="flickr"></a>
-          <a href="http://facebook.com"><img class="img" src="assets/Vector-1.png" target="_blank" alt="facebook"></a>
-        </nav>
-      </footer>
+    <button type="button">Login</button>
+
+    <div class="links">
+      <a href="#" class="new-account">Don't have an account!<span> Sing up</span> now</a>
+    </div>
+
+    <p>Or</p>
+  </main>
+
+  <footer id="footer">
+    <nav>
+      <a href="https://www.google.com" target="_blank"><img src="assets/Vector.png" alt="google"></a>
+      <a href="https://www.flickr.com" target="_blank"><img src="assets/Vector-2.png" alt="flickr"></a>
+      <a href="https://www.facebook.com" target="_blank"><img src="assets/Vector-1.png" alt="facebook"></a>
+    </nav>
+  </footer>
+
 </body>
+
 </html>
